--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -3,8 +3,8 @@
     <div class="col-sm-6 col-lg-3">
       <div class="card">
         <div class="card-body">
-          <div class="h4 m-0">89.9%</div>
-          <div>Lorem ipsum...</div>
+          <div class="h4 m-0">34.000.000</div>
+          <div>Km percorridos</div>
           <div class="progress progress-xs my-3">
             <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25"
                  aria-valuemin="0" aria-valuemax="100"></div>
@@ -16,8 +16,8 @@
     <div class="col-sm-6 col-lg-3">
       <div class="card">
         <div class="card-body">
-          <div class="h4 m-0">12.124</div>
-          <div>Lorem ipsum...</div>
+          <div class="h4 m-0">$12.124.000</div>
+          <div>Total gastos.</div>
           <div class="progress progress-xs my-3">
             <div class="progress-bar bg-info" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
                  aria-valuemax="100"></div>
@@ -29,8 +29,8 @@
     <div class="col-sm-6 col-lg-3">
       <div class="card">
         <div class="card-body">
-          <div class="h4 m-0">$98.111,00</div>
-          <div>Lorem ipsum...</div>
+          <div class="h4 m-0">$8.111,00</div>
+          <div>Costo Mantenimientos</div>
           <div class="progress progress-xs my-3">
             <div class="progress-bar bg-warning" role="progressbar" style="width: 25%" aria-valuenow="25"
                  aria-valuemin="0" aria-valuemax="100"></div>
@@ -42,8 +42,8 @@
     <div class="col-sm-6 col-lg-3">
       <div class="card">
         <div class="card-body">
-          <div class="h4 m-0">2 TB</div>
-          <div>Lorem ipsum...</div>
+          <div class="h4 m-0">12</div>
+          <div>Usuarios</div>
           <div class="progress progress-xs my-3">
             <div class="progress-bar bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25"
                  aria-valuemin="0" aria-valuemax="100"></div>
